--- a/data/TopoHeaderMapBegin.html
+++ b/data/TopoHeaderMapBegin.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Cyclic Graph Example</title>
+    <title>Header Heirarchy</title>
     <style>
         body {
             margin: 0;
